--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
             <artifactId>spring-boot-starter-log4j2</artifactId>
             <version>2.2.6.RELEASE</version>
         </dependency>
+        <!-- Dependency for H2 test DataBase -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
