--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 server.port 9090
+
+
+# ===============================
+# MySQL
+# ===============================
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/p6_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Europe/Paris
+# spring.datasource.username=${P9_USER_SQL}
+# spring.datasource.password=${P9_PWD_SQL}
+
+spring.datasource.username=root
+spring.datasource.password=RootRoot_
