--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,33 @@
-server.port 9090
+server.port 8080
+
+# ===============================
+# Actuator
+# ===============================
+
+management.server.port=8090
+management.endpoints.web.exposure.include=health, metrics, info, trace
+management.endpoint.health.show-details=always
+management.trace.http.include=PRINCIPAL
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# ===============================
+# MySQL
+# ===============================
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/p9_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Europe/Paris
+spring.datasource.username=root
+spring.datasource.password=RootRoot_
