--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,12 @@
             <artifactId>spring-boot</artifactId>
             <version>2.4.4</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <!-- ******************************************************************* -->
     <!-- ****************************** Build ****************************** -->
