Patient Controller tests

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,9 @@
 #Technical informations
 
-server.port 8080
+server.port 8092
 
 #Database access for test
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -12,11 +12,15 @@ spring.datasource.data=classpath:data-h2.sql
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
+
 # Configurations H2
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 #force le chargement de la base à partir du data-h2.sql en prod
 spring.datasource.initialization-mode=always
+
+#application.security.user.name=user
+#application.security.user.password=password
 
 #H2
 
