--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,7 @@
 #Technical informations
 
 server.port 8092
+server.error.include-stacktrace=always
 
 #Database access for test
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
