--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,17 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.mediscreen</groupId>
-    <artifactId>P9_Patient</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>P9_Patient</name>
-    <description>MEDISCREEN Micro-service Patient</description>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.4.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+    <groupId>com.mediscreen</groupId>
+    <artifactId>P9_Patient</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>P9_Patient</name>
+    <description>MEDISCREEN Micro-service Patient and User</description>
 
     <!-- ******************************************************************* -->
     <!-- **************************** properties *************************** -->
