--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 # ===============================
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://host.docker.internal:3306/p9ocr?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Europe/Paris
 spring.datasource.url=jdbc:mysql://localhost:3306/p9_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Europe/Paris
 #spring.datasource.username=${P9_USER_SQL}
 #spring.datasource.password=${P9_PWD_SQL}
