--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,12 @@
 version: '3'
-
 services:
   db:
     image: mysql
-    restart: on-failure
+    healthcheck:
+      test: "exit 0"
+    #volumes:
+    #- db_data:/var/lib/mysql/data
+
     #container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: 'RootRoot_'
@@ -12,20 +15,19 @@ services:
       MYSQL_PASSWORD: 'P9OCR@'
       # <Port exposed> : < MySQL Port running inside container>
     ports:
-    - 3307:3306
-
+      - "3307:3306"
   patient:
     image: p9_patient:latest
     container_name: p9_patient
-      # Where our data will be persisted
+    # Where our data will be persisted
     # volumes:
     #- "./db_data:/var/lib/docker/volumes/mysql/_data"
-    #depends_on:
-    #db:
-    #  condition: service_healthy
+    depends_on:
+      db:
+        condition: service_healthy
     ports:
       - "8080:8080"
-    restart: on-failure
+    restart: "no"
   # Names of volumes
   #volumes:
-  #db_data:
+  #  db_data:
