--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ management.trace.http.include=PRINCIPAL
 # ===============================
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.hibernate.ddl-auto=validate
 #spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
@@ -28,9 +28,12 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 # ===============================
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://host.docker.internal:3307/p9_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Europe/Paris
+#spring.datasource.url=jdbc:mysql://db:3306/p9_db?allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false
+#spring.datasource.url=jdbc:mysql://host.docker.internal:3306/p9_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Europe/Paris?allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://db/p9_db?allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false
 #spring.datasource.url=jdbc:mysql://localhost:3306/p9_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Europe/Paris
 #spring.datasource.username=${P9_USER_SQL}
 #spring.datasource.password=${P9_PWD_SQL}
-spring.datasource.username=root
-spring.datasource.password=RootRoot_
+spring.datasource.username=p9
+spring.datasource.password=p9
+spring.datasource.initialization-mode=always
