--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ management.endpoints.web.exposure.include=health, metrics, info, trace
 management.endpoint.health.show-details=always
 management.trace.http.include=PRINCIPAL
 
+
+spring.thymeleaf.prefix=classpath:/templates/
+
 # ===============================
 # JPA / HIBERNATE
 # ===============================
