--- a/pom.xml
+++ b/pom.xml
@@ -84,10 +84,15 @@
             <scope>runtime</scope>
         </dependency>
         <!-- Dependency for Log4j2 -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
-            <version>2.2.6.RELEASE</version>
+        </dependency>-->
+        <!-- Dependency for Spring Feign -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>3.0.0</version>
         </dependency>
         <!-- Dependency for Spring Data JPA -->
         <dependency>
