--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,8 +19,8 @@ spring.thymeleaf.prefix=classpath:/templates/
 
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=validate
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
@@ -32,20 +32,18 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 # ===============================
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# Version Docker
 
-#spring.datasource.url=jdbc:mysql://db/p9_db?allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Europe/Paris
+# Version Docker
+#spring.datasource.url=jdbc:mysql://host.docker.internal:3306/p9_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Europe/Paris&allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false
+
+#Version Locale
+spring.datasource.url=jdbc:mysql://localhost:3306/p9_db?allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Europe/Paris
+
 #spring.datasource.username=p9
 #spring.datasource.password=p9
 
-#Version Locale
-
-spring.datasource.url=jdbc:mysql://localhost:3306/p9_db?allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Europe/Paris
 spring.datasource.username=root
 spring.datasource.password=RootRoot_
-
-
-#spring.datasource.url=jdbc:mysql://host.docker.internal:3306/p9_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Europe/Paris&allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false
 
 spring.datasource.initialization-mode=always
 
