--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=mediscreen-patient
+spring.application.name=patient
 server.port=8080
 
 # ===============================
@@ -10,6 +10,9 @@ management.endpoints.web.exposure.include=health, metrics, info, trace
 management.endpoint.health.show-details=always
 management.trace.http.include=PRINCIPAL
 
+# ===============================
+# TYYMELEAF
+# ===============================
 
 spring.thymeleaf.prefix=classpath:/templates/
 
@@ -23,7 +26,6 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
@@ -32,12 +34,11 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 # ===============================
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 # Version Docker
-#spring.datasource.url=jdbc:mysql://host.docker.internal:3306/p9_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Europe/Paris&allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/p9_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Europe/Paris&allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false
 
 #Version Locale
-spring.datasource.url=jdbc:mysql://localhost:3306/p9_db?allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Europe/Paris
+#spring.datasource.url=jdbc:mysql://localhost:3306/p9_db?allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Europe/Paris
 
 #spring.datasource.username=p9
 #spring.datasource.password=p9
